--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -1,11 +1,8 @@
 name: Deploy web with GitHub Pages
 
 on:
-  push:
-    branches: ["main"]
-
   pull_request:
-    branches: ["main"]
+    branches: ["release"]
 
   workflow_dispatch:
 
